--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "@material-tailwind/react": "^2.1.9",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "dompurify": "^3.1.6",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.9.0",
     "jwt-decode": "^4.0.0",
+    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.13.8"
   },
